@@ -1,23 +1,40 @@
 /*
- * %W% %E%
- *
- * Copyright (c) 2006, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2003, 2013, Oracle and/or its affiliates. All rights reserved.
  * ORACLE PROPRIETARY/CONFIDENTIAL. Use is subject to license terms.
+ *
+ *
+ *
+ *
+ *
+ *
+ *
+ *
+ *
+ *
+ *
+ *
+ *
+ *
+ *
+ *
+ *
+ *
+ *
+ *
  */
 
 package javax.sql.rowset.serial;
 
+import java.io.BufferedReader;
+import java.io.IOException;
+import java.io.InputStreamReader;
 import java.sql.*;
-import javax.sql.*;
-import java.io.*;
-import java.lang.String;
-import java.math.*;
 import java.util.Map;
 import java.util.Vector;
 
 /**
- * The output stream for writing the attributes of a 
- * custom-mapped user-defined type (UDT) back to the database. 
+ * The output stream for writing the attributes of a
+ * custom-mapped user-defined type (UDT) back to the database.
  * The driver uses this interface internally, and its
  * methods are never directly invoked by an application programmer.
  * <p>
@@ -28,12 +45,12 @@ import java.util.Vector;
  * type map containing the <code>Class</code> object for the
  * class that implements <code>SQLData</code> for this UDT.
  * If the value to be written is an instance of <code>SQLData</code>,
- * the driver will create an instance of <code>SQLOutputImpl</code> 
+ * the driver will create an instance of <code>SQLOutputImpl</code>
  * and pass it to the method <code>SQLData.writeSQL</code>.
  * The method <code>writeSQL</code> in turn calls the
- * appropriate <code>SQLOutputImpl.writeXXX</code> methods 
+ * appropriate <code>SQLOutputImpl.writeXXX</code> methods
  * to write data from the <code>SQLData</code> object to
- * the <code>SQLOutputImpl</code> output stream as the 
+ * the <code>SQLOutputImpl</code> output stream as the
  * representation of an SQL user-defined type.
  */
 public class SQLOutputImpl implements SQLOutput {
@@ -42,6 +59,7 @@ public class SQLOutputImpl implements SQLOutput {
      * A reference to an existing vector that
      * contains the attributes of a <code>Struct</code> object.
      */
+    @SuppressWarnings("rawtypes")
     private Vector attribs;
 
     /**
@@ -49,9 +67,10 @@ public class SQLOutputImpl implements SQLOutput {
      * <code>SQLOutputImpl</code> object.  This type map
      * indicates the <code>SQLData</code> class whose
      * <code>writeSQL</code> method will be called.  This
-     * method will in turn call the appropriate 
+     * method will in turn call the appropriate
      * <code>SQLOutputImpl</code> writer methods.
      */
+    @SuppressWarnings("rawtypes")
     private Map map;
 
     /**
@@ -64,9 +83,9 @@ public class SQLOutputImpl implements SQLOutput {
      * thereby write the attributes to the new output stream.
      *
      * @param attributes a <code>Vector</code> object containing the attributes of
-     *        the UDT to be mapped to one or more objects in the Java 
+     *        the UDT to be mapped to one or more objects in the Java
      *        programming language
-     * 
+     *
      * @param map a <code>java.util.Map</code> object containing zero or
      *        more entries, with each entry consisting of 1) a <code>String</code>
      *        giving the fully qualified name of a UDT and 2) the
@@ -75,14 +94,14 @@ public class SQLOutputImpl implements SQLOutput {
      * @throws SQLException if the <code>attributes</code> or the <code>map</code>
      *        is a <code>null</code> value
      */
-    public SQLOutputImpl(Vector<?> attributes, Map<String,?> map) 
-        throws SQLException 
+    public SQLOutputImpl(Vector<?> attributes, Map<String,?> map)
+        throws SQLException
     {
         if ((attributes == null) || (map == null)) {
             throw new SQLException("Cannot instantiate a SQLOutputImpl " +
             "instance with null parameters");
-        }        
-        this.attribs = attributes; 
+        }
+        this.attribs = attributes;
         this.map = map;
     }
 
@@ -91,11 +110,11 @@ public class SQLOutputImpl implements SQLOutput {
     // These methods correspond to the column-accessor methods of
     // java.sql.ResultSet.
     //================================================================
-    
+
     /**
      * Writes a <code>String</code> in the Java programming language
      * to this <code>SQLOutputImpl</code> object. The driver converts
-     * it to an SQL <code>CHAR</code>, <code>VARCHAR</code>, or 
+     * it to an SQL <code>CHAR</code>, <code>VARCHAR</code>, or
      * <code>LONGVARCHAR</code> before returning it to the database.
      *
      * @param x the value to pass to the database
@@ -103,6 +122,7 @@ public class SQLOutputImpl implements SQLOutput {
      *        use by a <code>SQLData</code> object attempting to write the attribute
      *        values of a UDT to the database.
      */
+    @SuppressWarnings("unchecked")
     public void writeString(String x) throws SQLException {
         //System.out.println("Adding :"+x);
         attribs.add(x);
@@ -113,13 +133,14 @@ public class SQLOutputImpl implements SQLOutput {
      * to this <code>SQLOutputImpl</code> object. The driver converts
      * it to an SQL <code>BIT</code> before returning it to the database.
      *
-     * @param x the value to pass to the database     
+     * @param x the value to pass to the database
      * @throws SQLException if the <code>SQLOutputImpl</code> object is in
      *        use by a <code>SQLData</code> object attempting to write the attribute
      *        values of a UDT to the database.
      */
+    @SuppressWarnings("unchecked")
     public void writeBoolean(boolean x) throws SQLException {
-        attribs.add(new Boolean(x));
+        attribs.add(Boolean.valueOf(x));
     }
 
     /**
@@ -132,8 +153,9 @@ public class SQLOutputImpl implements SQLOutput {
      *        use by a <code>SQLData</code> object attempting to write the attribute
      *        values of a UDT to the database.
      */
+    @SuppressWarnings("unchecked")
     public void writeByte(byte x) throws SQLException {
-        attribs.add(new Byte(x));
+        attribs.add(Byte.valueOf(x));
     }
 
     /**
@@ -141,13 +163,14 @@ public class SQLOutputImpl implements SQLOutput {
      * to this <code>SQLOutputImpl</code> object. The driver converts
      * it to an SQL <code>SMALLINT</code> before returning it to the database.
      *
-     * @param x the value to pass to the database     
+     * @param x the value to pass to the database
      * @throws SQLException if the <code>SQLOutputImpl</code> object is in
      *        use by a <code>SQLData</code> object attempting to write the attribute
      *        values of a UDT to the database.
      */
+    @SuppressWarnings("unchecked")
     public void writeShort(short x) throws SQLException {
-        attribs.add(new Short(x));
+        attribs.add(Short.valueOf(x));
     }
 
     /**
@@ -160,8 +183,9 @@ public class SQLOutputImpl implements SQLOutput {
      *        use by a <code>SQLData</code> object attempting to write the attribute
      *        values of a UDT to the database.
      */
+    @SuppressWarnings("unchecked")
     public void writeInt(int x) throws SQLException {
-        attribs.add(new Integer(x));
+        attribs.add(Integer.valueOf(x));
     }
 
     /**
@@ -174,8 +198,9 @@ public class SQLOutputImpl implements SQLOutput {
      *        use by a <code>SQLData</code> object attempting to write the attribute
      *        values of a UDT to the database.
      */
+    @SuppressWarnings("unchecked")
     public void writeLong(long x) throws SQLException {
-        attribs.add(new Long(x));
+        attribs.add(Long.valueOf(x));
     }
 
     /**
@@ -188,8 +213,9 @@ public class SQLOutputImpl implements SQLOutput {
      *        use by a <code>SQLData</code> object attempting to write the attribute
      *        values of a UDT to the database.
      */
+    @SuppressWarnings("unchecked")
     public void writeFloat(float x) throws SQLException {
-        attribs.add(new Float(x));
+        attribs.add(Float.valueOf(x));
     }
 
     /**
@@ -202,8 +228,9 @@ public class SQLOutputImpl implements SQLOutput {
      *        use by a <code>SQLData</code> object attempting to write the attribute
      *        values of a UDT to the database.
      */
+    @SuppressWarnings("unchecked")
     public void writeDouble(double x) throws SQLException{
-        attribs.add(new Double(x));
+        attribs.add(Double.valueOf(x));
     }
 
     /**
@@ -211,11 +238,12 @@ public class SQLOutputImpl implements SQLOutput {
      * language to this <code>SQLOutputImpl</code> object. The driver converts
      * it to an SQL <code>NUMERIC</code> before returning it to the database.
      *
-     * @param x the value to pass to the database    
+     * @param x the value to pass to the database
      * @throws SQLException if the <code>SQLOutputImpl</code> object is in
      *        use by a <code>SQLData</code> object attempting to write the attribute
-     *        values of a UDT to the database.     
+     *        values of a UDT to the database.
      */
+    @SuppressWarnings("unchecked")
     public void writeBigDecimal(java.math.BigDecimal x) throws SQLException{
         attribs.add(x);
     }
@@ -226,11 +254,12 @@ public class SQLOutputImpl implements SQLOutput {
      * it to an SQL <code>VARBINARY</code> or <code>LONGVARBINARY</code>
      * before returning it to the database.
      *
-     * @param x the value to pass to the database  
+     * @param x the value to pass to the database
      * @throws SQLException if the <code>SQLOutputImpl</code> object is in
      *        use by a <code>SQLData</code> object attempting to write the attribute
      *        values of a UDT to the database.
      */
+    @SuppressWarnings("unchecked")
     public void writeBytes(byte[] x) throws SQLException {
         attribs.add(x);
     }
@@ -240,11 +269,12 @@ public class SQLOutputImpl implements SQLOutput {
      * language to this <code>SQLOutputImpl</code> object. The driver converts
      * it to an SQL <code>DATE</code> before returning it to the database.
      *
-     * @param x the value to pass to the database          
+     * @param x the value to pass to the database
      * @throws SQLException if the <code>SQLOutputImpl</code> object is in
      *        use by a <code>SQLData</code> object attempting to write the attribute
      *        values of a UDT to the database.
      */
+    @SuppressWarnings("unchecked")
     public void writeDate(java.sql.Date x) throws SQLException {
         attribs.add(x);
     }
@@ -259,6 +289,7 @@ public class SQLOutputImpl implements SQLOutput {
      *        use by a <code>SQLData</code> object attempting to write the attribute
      *        values of a UDT to the database.
      */
+    @SuppressWarnings("unchecked")
     public void writeTime(java.sql.Time x) throws SQLException {
         attribs.add(x);
     }
@@ -273,6 +304,7 @@ public class SQLOutputImpl implements SQLOutput {
      *        use by a <code>SQLData</code> object attempting to write the attribute
      *        values of a UDT to the database.
      */
+    @SuppressWarnings("unchecked")
     public void writeTimestamp(java.sql.Timestamp x) throws SQLException {
         attribs.add(x);
     }
@@ -282,27 +314,28 @@ public class SQLOutputImpl implements SQLOutput {
      * <code>SQLOutputImpl</code> object. The driver will do any necessary
      * conversion from Unicode to the database <code>CHAR</code> format.
      *
-     * @param x the value to pass to the database           
+     * @param x the value to pass to the database
      * @throws SQLException if the <code>SQLOutputImpl</code> object is in
      *        use by a <code>SQLData</code> object attempting to write the attribute
      *        values of a UDT to the database.
      */
+    @SuppressWarnings("unchecked")
     public void writeCharacterStream(java.io.Reader x) throws SQLException {
          BufferedReader bufReader = new BufferedReader(x);
          try {
              int i;
              while( (i = bufReader.read()) != -1 ) {
                 char ch = (char)i;
-		StringBuffer strBuf = new StringBuffer();
-		strBuf.append(ch);
-		
-		String str = new String(strBuf);                
+                StringBuffer strBuf = new StringBuffer();
+                strBuf.append(ch);
+
+                String str = new String(strBuf);
                 String strLine = bufReader.readLine();
-                
+
                 writeString(str.concat(strLine));
-             }   
+             }
          } catch(IOException ioe) {
-         
+
          }
     }
 
@@ -316,19 +349,20 @@ public class SQLOutputImpl implements SQLOutput {
      *        use by a <code>SQLData</code> object attempting to write the attribute
      *        values of a UDT to the database.
      */
+    @SuppressWarnings("unchecked")
     public void writeAsciiStream(java.io.InputStream x) throws SQLException {
          BufferedReader bufReader = new BufferedReader(new InputStreamReader(x));
          try {
                int i;
                while( (i=bufReader.read()) != -1 ) {
                 char ch = (char)i;
-               
-		StringBuffer strBuf = new StringBuffer();
-		strBuf.append(ch);
-		
-		String str = new String(strBuf);                
+
+                StringBuffer strBuf = new StringBuffer();
+                strBuf.append(ch);
+
+                String str = new String(strBuf);
                 String strLine = bufReader.readLine();
-                
+
                 writeString(str.concat(strLine));
             }
           }catch(IOException ioe) {
@@ -345,26 +379,27 @@ public class SQLOutputImpl implements SQLOutput {
      *        use by a <code>SQLData</code> object attempting to write the attribute
      *        values of a UDT to the database.
      */
+    @SuppressWarnings("unchecked")
     public void writeBinaryStream(java.io.InputStream x) throws SQLException {
          BufferedReader bufReader = new BufferedReader(new InputStreamReader(x));
          try {
                int i;
              while( (i=bufReader.read()) != -1 ) {
                 char ch = (char)i;
-               
-		StringBuffer strBuf = new StringBuffer();
-		strBuf.append(ch);
-		
-		String str = new String(strBuf);                
+
+                StringBuffer strBuf = new StringBuffer();
+                strBuf.append(ch);
+
+                String str = new String(strBuf);
                 String strLine = bufReader.readLine();
-                
+
                 writeString(str.concat(strLine));
              }
         } catch(IOException ioe) {
             throw new SQLException(ioe.getMessage());
         }
     }
-    
+
     //================================================================
     // Methods for writing items of SQL user-defined types to the stream.
     // These methods pass objects to the database as values of SQL
@@ -374,12 +409,12 @@ public class SQLOutputImpl implements SQLOutput {
     //================================================================
 
     /**
-     * Writes to the stream the data contained in the given 
+     * Writes to the stream the data contained in the given
      * <code>SQLData</code> object.
      * When the <code>SQLData</code> object is <code>null</code>, this
-     * method writes an SQL <code>NULL</code> to the stream.  
+     * method writes an SQL <code>NULL</code> to the stream.
      * Otherwise, it calls the <code>SQLData.writeSQL</code>
-     * method of the given object, which 
+     * method of the given object, which
      * writes the object's attributes to the stream.
      * <P>
      * The implementation of the method <code>SQLData.writeSQ</code>
@@ -389,40 +424,40 @@ public class SQLOutputImpl implements SQLOutput {
      * input stream and written to an <code>SQLOutputImpl</code>
      * output stream in the same order in which they were
      * listed in the SQL definition of the user-defined type.
-     * 
+     *
      * @param x the object representing data of an SQL structured or
      *          distinct type
      * @throws SQLException if the <code>SQLOutputImpl</code> object is in
      *        use by a <code>SQLData</code> object attempting to write the attribute
      *        values of a UDT to the database.
      */
+    @SuppressWarnings("unchecked")
     public void writeObject(SQLData x) throws SQLException {
-        
+
         /*
          * Except for the types that are passed as objects
          * this seems to be the only way for an object to
          * get a null value for a field in a structure.
          *
-         * Note: this means that the class defining SQLData 
+         * Note: this means that the class defining SQLData
          * will need to track if a field is SQL null for itself
          */
         if (x == null) {
-            attribs.add(x);
-            return;
+            attribs.add(null);
+        } else {
+            /*
+             * We have to write out a SerialStruct that contains
+             * the name of this class otherwise we don't know
+             * what to re-instantiate during readSQL()
+             */
+            attribs.add(new SerialStruct(x, map));
         }
-        
-        /* 
-         * We have to write out a SerialStruct that contains
-         * the name of this class otherwise we don't know
-         * what to re-instantiate during readSQL()
-         */
-        attribs.add(new SerialStruct((SQLData)x, map));
     }
 
     /**
      * Writes a <code>Ref</code> object in the Java programming language
      * to this <code>SQLOutputImpl</code> object.  The driver converts
-     * it to a serializable <code>SerialRef</code> SQL <code>REF</code> value 
+     * it to a serializable <code>SerialRef</code> SQL <code>REF</code> value
      * before returning it to the database.
      *
      * @param x an object representing an SQL <code>REF</code> value
@@ -430,18 +465,19 @@ public class SQLOutputImpl implements SQLOutput {
      *        use by a <code>SQLData</code> object attempting to write the attribute
      *        values of a UDT to the database.
      */
+    @SuppressWarnings("unchecked")
     public void writeRef(Ref x) throws SQLException {
         if (x == null) {
-            attribs.add(x);
-            return;
+            attribs.add(null);
+        } else {
+            attribs.add(new SerialRef(x));
         }
-        attribs.add(new SerialRef(x));
     }
 
     /**
      * Writes a <code>Blob</code> object in the Java programming language
      * to this <code>SQLOutputImpl</code> object.  The driver converts
-     * it to a serializable <code>SerialBlob</code> SQL <code>BLOB</code> value 
+     * it to a serializable <code>SerialBlob</code> SQL <code>BLOB</code> value
      * before returning it to the database.
      *
      * @param x an object representing an SQL <code>BLOB</code> value
@@ -449,18 +485,19 @@ public class SQLOutputImpl implements SQLOutput {
      *        use by a <code>SQLData</code> object attempting to write the attribute
      *        values of a UDT to the database.
      */
+    @SuppressWarnings("unchecked")
     public void writeBlob(Blob x) throws SQLException {
         if (x == null) {
-            attribs.add(x);
-            return;
+            attribs.add(null);
+        } else {
+            attribs.add(new SerialBlob(x));
         }
-        attribs.add(new SerialBlob(x));
     }
-    
+
     /**
      * Writes a <code>Clob</code> object in the Java programming language
      * to this <code>SQLOutputImpl</code> object.  The driver converts
-     * it to a serializable <code>SerialClob</code> SQL <code>CLOB</code> value 
+     * it to a serializable <code>SerialClob</code> SQL <code>CLOB</code> value
      * before returning it to the database.
      *
      * @param x an object representing an SQL <code>CLOB</code> value
@@ -468,12 +505,13 @@ public class SQLOutputImpl implements SQLOutput {
      *        use by a <code>SQLData</code> object attempting to write the attribute
      *        values of a UDT to the database.
      */
+    @SuppressWarnings("unchecked")
     public void writeClob(Clob x) throws SQLException {
         if (x == null) {
-            attribs.add(x);
-            return;
+            attribs.add(null);
+        } else {
+            attribs.add(new SerialClob(x));
         }
-        attribs.add(new SerialClob(x));
     }
 
     /**
@@ -484,24 +522,25 @@ public class SQLOutputImpl implements SQLOutput {
      * <P>
      * This method should be used when an SQL structured type has been
      * mapped to a <code>Struct</code> object in the Java programming
-     * language (the standard mapping).  The method 
+     * language (the standard mapping).  The method
      * <code>writeObject</code> should be used if an SQL structured type
      * has been custom mapped to a class in the Java programming language.
      *
-     * @param x an object representing the attributes of an SQL structured type          
+     * @param x an object representing the attributes of an SQL structured type
      * @throws SQLException if the <code>SQLOutputImpl</code> object is in
      *        use by a <code>SQLData</code> object attempting to write the attribute
      *        values of a UDT to the database.
      */
+    @SuppressWarnings("unchecked")
     public void writeStruct(Struct x) throws SQLException {
         SerialStruct s = new SerialStruct(x,map);;
-        attribs.add(s);        
+        attribs.add(s);
     }
-    
+
     /**
      * Writes an <code>Array</code> object in the Java
      * programming language to this <code>SQLOutputImpl</code>
-     * object. The driver converts this value to a serializable 
+     * object. The driver converts this value to a serializable
      * <code>SerialArray</code> SQL <code>ARRAY</code>
      * value before returning it to the database.
      *
@@ -510,36 +549,37 @@ public class SQLOutputImpl implements SQLOutput {
      *        use by a <code>SQLData</code> object attempting to write the attribute
      *        values of a UDT to the database.
      */
+    @SuppressWarnings("unchecked")
     public void writeArray(Array x) throws SQLException {
         if (x == null) {
-            attribs.add(x);
-            return;
+            attribs.add(null);
+        } else {
+            attribs.add(new SerialArray(x, map));
         }
-        attribs.add(new SerialArray(x, map));
     }
 
     /**
-     * Writes an <code>java.sql.Type.DATALINK</code> object in the Java 
+     * Writes an <code>java.sql.Type.DATALINK</code> object in the Java
      * programming language to this <code>SQLOutputImpl</code> object. The
      * driver converts this value to a serializable <code>SerialDatalink</code>
      * SQL <code>DATALINK</code> value before return it to the database.
-     *     
+     *
      * @param url an object representing a SQL <code>DATALINK</code> value
      * @throws SQLException if the <code>SQLOutputImpl</code> object is in
      *        use by a <code>SQLData</code> object attempting to write the attribute
      *        values of a UDT to the database.
      */
+    @SuppressWarnings("unchecked")
     public void writeURL(java.net.URL url) throws SQLException {
         if (url == null) {
-            attribs.add(url);
-            return;
+            attribs.add(null);
+        } else {
+            attribs.add(new SerialDatalink(url));
         }
-        attribs.add(new SerialDatalink(url));
-        
     }
 
 
-    /**
+  /**
    * Writes the next attribute to the stream as a <code>String</code>
    * in the Java programming language. The driver converts this to a
    * SQL <code>NCHAR</code> or
@@ -552,10 +592,11 @@ public class SQLOutputImpl implements SQLOutput {
    * @exception SQLException if a database access error occurs
    * @since 1.6
    */
+   @SuppressWarnings("unchecked")
    public void writeNString(String x) throws SQLException {
-        throw new UnsupportedOperationException("Operation not supported");    
-    }
-  
+       attribs.add(x);
+   }
+
   /**
    * Writes an SQL <code>NCLOB</code> value to the stream.
    *
@@ -565,11 +606,12 @@ public class SQLOutputImpl implements SQLOutput {
    * @exception SQLException if a database access error occurs
    * @since 1.6
    */
+   @SuppressWarnings("unchecked")
    public void writeNClob(NClob x) throws SQLException {
-        throw new UnsupportedOperationException("Operation not supported");    
-    }
-  
-  
+           attribs.add(x);
+   }
+
+
   /**
    * Writes an SQL <code>ROWID</code> value to the stream.
    *
@@ -579,9 +621,10 @@ public class SQLOutputImpl implements SQLOutput {
    * @exception SQLException if a database access error occurs
    * @since 1.6
    */
+   @SuppressWarnings("unchecked")
    public void writeRowId(RowId x) throws SQLException {
-        throw new UnsupportedOperationException("Operation not supported");    
-    }
+        attribs.add(x);
+   }
 
 
   /**
@@ -593,13 +636,9 @@ public class SQLOutputImpl implements SQLOutput {
    * @exception SQLException if a database access error occurs
    * @since 1.6
    */
+   @SuppressWarnings("unchecked")
    public void writeSQLXML(SQLXML x) throws SQLException {
-        throw new UnsupportedOperationException("Operation not supported");    
+        attribs.add(x);
     }
 
 }
-
-
-
-
-
