@@ -1,8 +1,26 @@
 /*
- * %W% %E%
- *
- * Copyright (c) 2006, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 1997, 2015, Oracle and/or its affiliates. All rights reserved.
  * ORACLE PROPRIETARY/CONFIDENTIAL. Use is subject to license terms.
+ *
+ *
+ *
+ *
+ *
+ *
+ *
+ *
+ *
+ *
+ *
+ *
+ *
+ *
+ *
+ *
+ *
+ *
+ *
+ *
  */
 package javax.swing;
 
@@ -21,12 +39,12 @@ import java.io.ObjectInputStream;
 import java.io.IOException;
 
 /**
- * A <code>JTextArea</code> is a multi-line area that displays plain text. 
- * It is intended to be a lightweight component that provides source 
+ * A <code>JTextArea</code> is a multi-line area that displays plain text.
+ * It is intended to be a lightweight component that provides source
  * compatibility with the <code>java.awt.TextArea</code> class where it can
  * reasonably do so.
  * You can find information and examples of using all the text components in
- * <a href="http://java.sun.com/docs/books/tutorial/uiswing/components/text.html">Using Text Components</a>,
+ * <a href="https://docs.oracle.com/javase/tutorial/uiswing/components/text.html">Using Text Components</a>,
  * a section in <em>The Java Tutorial.</em>
  *
  * <p>
@@ -36,15 +54,15 @@ import java.io.IOException;
  * Alternative multi-line text classes with
  * more capabilities are <code>JTextPane</code> and <code>JEditorPane</code>.
  * <p>
- * The <code>java.awt.TextArea</code> internally handles scrolling.  
- * <code>JTextArea</code> is different in that it doesn't manage scrolling, 
- * but implements the swing <code>Scrollable</code> interface.  This allows it 
+ * The <code>java.awt.TextArea</code> internally handles scrolling.
+ * <code>JTextArea</code> is different in that it doesn't manage scrolling,
+ * but implements the swing <code>Scrollable</code> interface.  This allows it
  * to be placed inside a <code>JScrollPane</code> if scrolling
  * behavior is desired, and used directly if scrolling is not desired.
  * <p>
- * The <code>java.awt.TextArea</code> has the ability to do line wrapping. 
+ * The <code>java.awt.TextArea</code> has the ability to do line wrapping.
  * This was controlled by the horizontal scrolling policy.  Since
- * scrolling is not done by <code>JTextArea</code> directly, backward 
+ * scrolling is not done by <code>JTextArea</code> directly, backward
  * compatibility must be provided another way.  <code>JTextArea</code> has
  * a bound property for line wrapping that controls whether or
  * not it will wrap lines.  By default, the line wrapping property
@@ -63,11 +81,11 @@ import java.io.IOException;
  * the viewport preferred size along the same axis.
  * <p>
  * The <code>java.awt.TextArea</code> could be monitored for changes by adding
- * a <code>TextListener</code> for <code>TextEvent</code>s. 
+ * a <code>TextListener</code> for <code>TextEvent</code>s.
  * In the <code>JTextComponent</code> based
  * components, changes are broadcasted from the model via a
- * <code>DocumentEvent</code> to <code>DocumentListeners</code>. 
- * The <code>DocumentEvent</code> gives 
+ * <code>DocumentEvent</code> to <code>DocumentListeners</code>.
+ * The <code>DocumentEvent</code> gives
  * the location of the change and the kind of change if desired.
  * The code fragment might look something like:
  * <pre>
@@ -75,7 +93,7 @@ import java.io.IOException;
  *    JTextArea myArea = ??;
  *    myArea.getDocument().addDocumentListener(myListener);
  * </pre>
- * <p>
+ *
  * <dl>
  * <dt><b><font size=+1>Newlines</font></b>
  * <dd>
@@ -94,16 +112,15 @@ import java.io.IOException;
  * future Swing releases. The current serialization support is
  * appropriate for short term storage or RMI between applications running
  * the same version of Swing.  As of 1.4, support for long term storage
- * of all JavaBeans<sup><font size="-2">TM</font></sup>
+ * of all JavaBeans&trade;
  * has been added to the <code>java.beans</code> package.
  * Please see {@link java.beans.XMLEncoder}.
  *
  * @beaninfo
  *   attribute: isContainer false
  * description: A multi-line area that displays plain text.
- * 
+ *
  * @author  Timothy Prinzing
- * @version %I% %G%
  * @see JTextPane
  * @see JEditorPane
  */
@@ -138,8 +155,8 @@ public class JTextArea extends JTextComponent {
      * rows and columns.  A default model is created, and the initial
      * string is null.
      *
-     * @param rows the number of rows >= 0
-     * @param columns the number of columns >= 0
+     * @param rows the number of rows &gt;= 0
+     * @param columns the number of columns &gt;= 0
      * @exception IllegalArgumentException if the rows or columns
      *  arguments are negative.
      */
@@ -152,8 +169,8 @@ public class JTextArea extends JTextComponent {
      * of rows and columns.  A default model is created.
      *
      * @param text the text to be displayed, or null
-     * @param rows the number of rows >= 0
-     * @param columns the number of columns >= 0
+     * @param rows the number of rows &gt;= 0
+     * @param columns the number of columns &gt;= 0
      * @exception IllegalArgumentException if the rows or columns
      *  arguments are negative.
      */
@@ -178,8 +195,8 @@ public class JTextArea extends JTextComponent {
      *
      * @param doc the model to use, or create a default one if null
      * @param text the text to be displayed, null if none
-     * @param rows the number of rows >= 0
-     * @param columns the number of columns >= 0
+     * @param rows the number of rows &gt;= 0
+     * @param columns the number of columns &gt;= 0
      * @exception IllegalArgumentException if the rows or columns
      *  arguments are negative.
      */
@@ -195,18 +212,18 @@ public class JTextArea extends JTextComponent {
             setText(text);
             select(0, 0);
         }
-	if (rows < 0) {
-	    throw new IllegalArgumentException("rows: " + rows);
-	}
-	if (columns < 0) {
-	    throw new IllegalArgumentException("columns: " + columns);
-	}
+        if (rows < 0) {
+            throw new IllegalArgumentException("rows: " + rows);
+        }
+        if (columns < 0) {
+            throw new IllegalArgumentException("columns: " + columns);
+        }
         LookAndFeel.installProperty(this,
-                                    "focusTraversalKeysForward", 
+                                    "focusTraversalKeysForward",
                                     JComponent.
                                     getManagingFocusForwardTraversalKeys());
         LookAndFeel.installProperty(this,
-                                    "focusTraversalKeysBackward", 
+                                    "focusTraversalKeysBackward",
                                     JComponent.
                                     getManagingFocusBackwardTraversalKeys());
     }
@@ -224,7 +241,7 @@ public class JTextArea extends JTextComponent {
 
     /**
      * Creates the default implementation of the model
-     * to be used at construction if one isn't explicitly 
+     * to be used at construction if one isn't explicitly
      * given.  A new instance of PlainDocument is returned.
      *
      * @return the default document model
@@ -250,7 +267,7 @@ public class JTextArea extends JTextComponent {
         Document doc = getDocument();
         if (doc != null) {
             int old = getTabSize();
-            doc.putProperty(PlainDocument.tabSizeAttribute, new Integer(size));
+            doc.putProperty(PlainDocument.tabSizeAttribute, Integer.valueOf(size));
             firePropertyChange("tabSize", old, size);
         }
     }
@@ -344,11 +361,11 @@ public class JTextArea extends JTextComponent {
     }
 
     /**
-     * Translates an offset into the components text to a 
+     * Translates an offset into the components text to a
      * line number.
      *
-     * @param offset the offset >= 0
-     * @return the line number >= 0
+     * @param offset the offset &gt;= 0
+     * @return the line number &gt;= 0
      * @exception BadLocationException thrown if the offset is
      *   less than zero or greater than the document length.
      */
@@ -367,7 +384,7 @@ public class JTextArea extends JTextComponent {
     /**
      * Determines the number of lines contained in the area.
      *
-     * @return the number of lines > 0
+     * @return the number of lines &gt; 0
      */
     public int getLineCount() {
         Element map = getDocument().getDefaultRootElement();
@@ -377,11 +394,11 @@ public class JTextArea extends JTextComponent {
     /**
      * Determines the offset of the start of the given line.
      *
-     * @param line  the line number to translate >= 0
-     * @return the offset >= 0
+     * @param line  the line number to translate &gt;= 0
+     * @return the offset &gt;= 0
      * @exception BadLocationException thrown if the line is
      * less than zero or greater or equal to the number of
-     * lines contained in the document (as reported by 
+     * lines contained in the document (as reported by
      * getLineCount).
      */
     public int getLineStartOffset(int line) throws BadLocationException {
@@ -400,11 +417,11 @@ public class JTextArea extends JTextComponent {
     /**
      * Determines the offset of the end of the given line.
      *
-     * @param line  the line >= 0
-     * @return the offset >= 0
+     * @param line  the line &gt;= 0
+     * @return the offset &gt;= 0
      * @exception BadLocationException Thrown if the line is
      * less than zero or greater or equal to the number of
-     * lines contained in the document (as reported by 
+     * lines contained in the document (as reported by
      * getLineCount).
      */
     public int getLineEndOffset(int line) throws BadLocationException {
@@ -427,14 +444,9 @@ public class JTextArea extends JTextComponent {
     /**
      * Inserts the specified text at the specified position.  Does nothing
      * if the model is null or if the text is null or empty.
-     * <p>
-     * This method is thread safe, although most Swing methods
-     * are not. Please see 
-     * <A HREF="http://java.sun.com/docs/books/tutorial/uiswing/misc/threads.html">How
-     * to Use Threads</A> for more information.     
      *
      * @param str the text to insert
-     * @param pos the position at which to insert >= 0
+     * @param pos the position at which to insert &gt;= 0
      * @exception IllegalArgumentException  if pos is an
      *  invalid position in the model
      * @see TextComponent#setText
@@ -454,11 +466,6 @@ public class JTextArea extends JTextComponent {
     /**
      * Appends the given text to the end of the document.  Does nothing if
      * the model is null or the string is null or empty.
-     * <p>
-     * This method is thread safe, although most Swing methods
-     * are not. Please see 
-     * <A HREF="http://java.sun.com/docs/books/tutorial/uiswing/misc/threads.html">How
-     * to Use Threads</A> for more information.     
      *
      * @param str the text to insert
      * @see #insert
@@ -477,19 +484,13 @@ public class JTextArea extends JTextComponent {
      * Replaces text from the indicated start to end position with the
      * new text specified.  Does nothing if the model is null.  Simply
      * does a delete if the new string is null or empty.
-     * <p>
-     * This method is thread safe, although most Swing methods
-     * are not. Please see 
-     * <A HREF="http://java.sun.com/docs/books/tutorial/uiswing/misc/threads.html">How
-     * to Use Threads</A> for more information.     
      *
      * @param str the text to use as the replacement
-     * @param start the start position >= 0
-     * @param end the end position >= start
+     * @param start the start position &gt;= 0
+     * @param end the end position &gt;= start
      * @exception IllegalArgumentException  if part of the range is an
      *  invalid position in the model
      * @see #insert
-     * @see #replaceRange
      */
     public void replaceRange(String str, int start, int end) {
         if (end < start) {
@@ -515,7 +516,7 @@ public class JTextArea extends JTextComponent {
     /**
      * Returns the number of rows in the TextArea.
      *
-     * @return the number of rows >= 0
+     * @return the number of rows &gt;= 0
      */
     public int getRows() {
         return rows;
@@ -525,7 +526,7 @@ public class JTextArea extends JTextComponent {
      * Sets the number of rows for this TextArea.  Calls invalidate() after
      * setting the new value.
      *
-     * @param rows the number of rows >= 0
+     * @param rows the number of rows &gt;= 0
      * @exception IllegalArgumentException if rows is less than 0
      * @see #getRows
      * @beaninfo
@@ -546,7 +547,7 @@ public class JTextArea extends JTextComponent {
      * Defines the meaning of the height of a row.  This defaults to
      * the height of the font.
      *
-     * @return the height >= 1
+     * @return the height &gt;= 1
      */
     protected int getRowHeight() {
         if (rowHeight == 0) {
@@ -559,7 +560,7 @@ public class JTextArea extends JTextComponent {
     /**
      * Returns the number of columns in the TextArea.
      *
-     * @return number of columns >= 0
+     * @return number of columns &gt;= 0
      */
     public int getColumns() {
         return columns;
@@ -569,7 +570,7 @@ public class JTextArea extends JTextComponent {
      * Sets the number of columns for this TextArea.  Does an invalidate()
      * after setting the new value.
      *
-     * @param columns the number of columns >= 0
+     * @param columns the number of columns &gt;= 0
      * @exception IllegalArgumentException if columns is less than 0
      * @see #getColumns
      * @beaninfo
@@ -591,10 +592,10 @@ public class JTextArea extends JTextComponent {
      * The meaning of what a column is can be considered a fairly weak
      * notion for some fonts.  This method is used to define the width
      * of a column.  By default this is defined to be the width of the
-     * character <em>m</em> for the font used.  This method can be 
+     * character <em>m</em> for the font used.  This method can be
      * redefined to be some alternative amount.
      *
-     * @return the column width >= 1
+     * @return the column width &gt;= 1
      */
     protected int getColumnWidth() {
         if (columnWidth == 0) {
@@ -614,19 +615,19 @@ public class JTextArea extends JTextComponent {
      * @return the size
      */
     public Dimension getPreferredSize() {
-	Dimension d = super.getPreferredSize();
+        Dimension d = super.getPreferredSize();
         d = (d == null) ? new Dimension(400,400) : d;
         Insets insets = getInsets();
 
         if (columns != 0) {
-            d.width = Math.max(d.width, columns * getColumnWidth() + 
-                    insets.left + insets.right); 	
+            d.width = Math.max(d.width, columns * getColumnWidth() +
+                    insets.left + insets.right);
         }
-	if (rows != 0) {
-	    d.height = Math.max(d.height, rows * getRowHeight() +
+        if (rows != 0) {
+            d.height = Math.max(d.height, rows * getRowHeight() +
                                 insets.top + insets.bottom);
-	}
-	return d;
+        }
+        return d;
     }
 
     /**
@@ -637,25 +638,25 @@ public class JTextArea extends JTextComponent {
      */
     public void setFont(Font f) {
         super.setFont(f);
-        rowHeight = 0; 
+        rowHeight = 0;
         columnWidth = 0;
     }
 
 
     /**
-     * Returns a string representation of this JTextArea. This method 
-     * is intended to be used only for debugging purposes, and the 
-     * content and format of the returned string may vary between      
-     * implementations. The returned string may be empty but may not 
+     * Returns a string representation of this JTextArea. This method
+     * is intended to be used only for debugging purposes, and the
+     * content and format of the returned string may vary between
+     * implementations. The returned string may be empty but may not
      * be <code>null</code>.
-     * 
+     *
      * @return  a string representation of this JTextArea.
      */
     protected String paramString() {
         String wrapString = (wrap ?
-			     "true" : "false");
+                             "true" : "false");
         String wordString = (word ?
-			     "true" : "false");
+                             "true" : "false");
 
         return super.paramString() +
         ",colums=" + columns +
@@ -669,11 +670,11 @@ public class JTextArea extends JTextComponent {
     // --- Scrollable methods ----------------------------------------
 
     /**
-     * Returns true if a viewport should always force the width of this 
+     * Returns true if a viewport should always force the width of this
      * Scrollable to match the width of the viewport.  This is implemented
      * to return true if the line wrapping policy is true, and false
      * if lines are not being wrapped.
-     * 
+     *
      * @return true if a viewport should force the Scrollables width
      * to match its own.
      */
@@ -686,7 +687,7 @@ public class JTextArea extends JTextComponent {
      * is embedded in a JScrollPane.  This uses the desired column
      * and row settings if they have been set, otherwise the superclass
      * behavior is used.
-     * 
+     *
      * @return The preferredSize of a JViewport whose view is this Scrollable.
      * @see JViewport#getPreferredSize
      */
@@ -711,7 +712,7 @@ public class JTextArea extends JTextComponent {
      * <p>
      * Scrolling containers, like JScrollPane, will use this method
      * each time the user requests a unit scroll.
-     * 
+     *
      * @param visibleRect the view area visible within the viewport
      * @param orientation Either SwingConstants.VERTICAL or
      *   SwingConstants.HORIZONTAL.
@@ -734,8 +735,8 @@ public class JTextArea extends JTextComponent {
         }
     }
 
-    /** 
-     * See readObject() and writeObject() in JComponent for more 
+    /**
+     * See readObject() and writeObject() in JComponent for more
      * information about serialization in Swing.
      */
     private void writeObject(ObjectOutputStream s) throws IOException {
@@ -755,12 +756,12 @@ public class JTextArea extends JTextComponent {
 
 
     /**
-     * Gets the AccessibleContext associated with this JTextArea. 
-     * For JTextAreas, the AccessibleContext takes the form of an 
-     * AccessibleJTextArea. 
+     * Gets the AccessibleContext associated with this JTextArea.
+     * For JTextAreas, the AccessibleContext takes the form of an
+     * AccessibleJTextArea.
      * A new AccessibleJTextArea instance is created if necessary.
      *
-     * @return an AccessibleJTextArea that serves as the 
+     * @return an AccessibleJTextArea that serves as the
      *         AccessibleContext of this JTextArea
      */
     public AccessibleContext getAccessibleContext() {
@@ -771,9 +772,9 @@ public class JTextArea extends JTextComponent {
     }
 
     /**
-     * This class implements accessibility support for the 
-     * <code>JTextArea</code> class.  It provides an implementation of the 
-     * Java Accessibility API appropriate to text area user-interface 
+     * This class implements accessibility support for the
+     * <code>JTextArea</code> class.  It provides an implementation of the
+     * Java Accessibility API appropriate to text area user-interface
      * elements.
      * <p>
      * <strong>Warning:</strong>
@@ -781,7 +782,7 @@ public class JTextArea extends JTextComponent {
      * future Swing releases. The current serialization support is
      * appropriate for short term storage or RMI between applications running
      * the same version of Swing.  As of 1.4, support for long term storage
-     * of all JavaBeans<sup><font size="-2">TM</font></sup>
+     * of all JavaBeans&trade;
      * has been added to the <code>java.beans</code> package.
      * Please see {@link java.beans.XMLEncoder}.
      */
